include $(top_srcdir)/Makefile.am.common
nobase_include_HEADERS = \
	cinamo/VectorMap.h\
	cinamo/XVal.h\
	cinamo/Standard.h\
	cinamo/Handler.h\
	cinamo/Time.h\
	cinamo/FileSystem.h\
	cinamo/FormPayload.h\
	cinamo/Exception.h\
	cinamo/Url.h\
	cinamo/XMLAttrParser.h\
	cinamo/Cinamo.h\
	cinamo/MixType.h\
	cinamo/Base64.h\
	cinamo/XArchiver.h\
	cinamo/ClassUtil.h\
	cinamo/TypeTraits.h\
	cinamo/Logger.h\
	cinamo/Common.h\
	cinamo/Thread.h\
	cinamo/Dynamic.h\
	cinamo/internal/XVal.h\
	cinamo/internal/FileSystem.h\
	cinamo/internal/VectorProxy.h\
	cinamo/internal/IntProxy.h\
	cinamo/internal/Win32.h\
	cinamo/internal/XArchiver.h\
	cinamo/internal/EnumProxy.h\
	cinamo/internal/String.h\
	cinamo/PairFunctor.h\
	cinamo/Matrix.h\
	cinamo/String.h\
	cinamo/functional/Base.h\
	cinamo/functional/Maybe.h\
	cinamo/functional/Ident.h\
	cinamo/functional/Parser.h\
	cinamo/functional/List.h\
	cinamo/functional/Either.h\
	cinamo/functional/Box.h\
	cinamo/Platform.h\
	cinamo/Config.h
noinst_HEADERS=